styles.css
:root {
    --color-header-bg: #f5edd8;
    --color-card-bg: #fbf6ec;
    --color-accents: #c97a3a;
    --color-primary-text: #3d2508;
    --color-muted-text: #8b6040;
    --color-border: #e2c99a;
}

@font-face {
    font-family: Lora;
    src: url(Lora/Lora-VariableFont_wght.ttf);
}
@font-face {
    font-family: lora-italic;
    src: url(Lora/Lora-Italic-VariableFont_wght.ttf);
}
@font-face {
    font-family: Inter;
    src: url(Inter/Inter-VariableFont_opsz_wght.ttf);
}

body {
    margin: 0;
    background-color: #ede5c0;
}
.container {
    display: flex;
    flex-direction: column;
    background-color: var(--color-card-bg);
    height: 100vh;
    margin: 0 auto;
    max-width: 600px;
    font-family: Lora;
    color: var(--color-primary-text);
}
/*header styling*/
.container > .header {
    display: flex;
    justify-content: space-between;
    padding: 0 15px;
    align-items: center;
    background-color: var(--color-header-bg);
    margin-bottom: 1rem;
    border: solid 0.5px var(--color-border);
    font-weight: 500;
}
button {
    background-color: var(--color-card-bg);
    border-radius: 7px;
    border: solid 0.5px var(--color-border);
    padding: 6px 14px;
    font-size: 13px;
    /* Headings & book titles */
    /*font-family: "Lora", serif;*/

    /* UI elements: buttons, meta, labels */
    font-family:
        "Inter",
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        "Open Sans",
        "Helvetica Neue",
        sans-serif;
}

button:hover {
    background-color: var(--color-border);
    cursor: pointer;
    border: solid 0.5px var(--color-accents);
}

button:active {
    background-color: var(--color-border);
    border-radius: 7px;
    border: solid 0.5px var(--color-border);
    padding: 6px 14px;
    font-size: 13px;
}
/*outer book section*/
.book-section {
    display: flex;
    flex-direction: column;
    border: solid 0.5px var(--color-border);
    padding: 10px;
    background-color: var(--color-header-bg);

    gap: 10px;
}
/*book item*/
.book {
    display: flex;
    align-items: center;
    justify-content: space-around;
    gap: 10px;
}

.book-meta {
    font-family: Inter;
}

#mark-as-read {
    padding: 6px 16px;
}
/*accent color to book author and num of pages*/
.book-author,
.book-pages {
    color: var(--color-accents);
}

